--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,6 @@
     "outDir": "./dist",
     "rootDir": "./"
   },
-  "include": [
-    "src/**/*.ts"
-  ],
-  "exclude": [
-    "dist"
-  ]
+  "include": ["src/**/*.ts"],
+  "exclude": ["node_modules", "dist", "prisma/migrations"]
 }
