--- a/package.json
+++ b/package.json
@@ -11,8 +11,6 @@
     "start": "node --env-file .env dist/index.js",
     "build": "tsc",
     "type-check": "tsc --noEmit",
-    "lint": "eslint .",
-    "lint:fix": "eslint --fix .",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -34,15 +32,13 @@
   "homepage": "https://github.com/devilkiller-ag/sentiment-analysis-api#readme",
   "dependencies": {
     "@prisma/client": "^6.6.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.25.1",
     "@tsconfig/node22": "^22.0.1",
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
-    "eslint": "^9.25.1",
-    "eslint-plugin-perfectionist": "^4.12.1",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.1",
     "prettier": "^3.5.3",
@@ -53,7 +49,6 @@
   },
   "lint-staged": {
     "*.{js,jsx,ts,tsx}": [
-      "eslint",
       "prettier --check"
     ],
     "*.{json,yml,yaml,md}": [
