--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "tsx --watch --env-file .env src/index.ts",
-    "start": "node --env-file .env dist/index.js",
+    "start": "node dist/index.js",
     "build": "tsc",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
