--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "dev": "tsx --watch --env-file .env src/index.ts",
     "start": "node dist/index.js",
-    "build": "tsc",
+    "build": "tsup src/index.ts --out-dir dist --format esm --splitting --clean",
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
@@ -34,7 +34,8 @@
     "@prisma/client": "^6.6.0",
     "cors": "^2.8.5",
     "express": "^5.1.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "tsup": "^8.4.0"
   },
   "devDependencies": {
     "@tsconfig/node22": "^22.0.1",
